--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Creating educational resources for sspcloud users"
+title: "Creating educational resources for SSPCloud users"
 subtitle: "Startup guide"
 author: "Lino Galiana"
 ---
@@ -7,14 +7,14 @@ author: "Lino Galiana"
 
 This tutorial aims to be a practical guide for people building `R` or `Python` educational resources and wishing to facilitate access to them through the SSPCloud.
 
-It requires a minimum knowledge on:
+There are a few requirements:
 
 - A minimum level of proficiency in Git is required to develop and make available online training resources. However, this facilitated provision of resources does not imply that trainees are familiar with Git.
-- [`Quarto`](https://quarto.org/) the automated report and website builder inherited from R Markdown
+- [`Quarto`](https://quarto.org/) the automated report and website builder inherited from `R Markdown`.
 - [`SSPCloud` documentation](https://docs.sspcloud.fr/en/), in particular the fundamental difference between making resources available for execution on a local computer or on a server like the SSPCloud. 
-- Some knowledge regarding deployment of resources using `Github Actions` are useful. This tutorial gives a few templates but understanding them is not in the scope of that tutorial. 
+- Some knowledge regarding deployment of resources using `Github Actions` is useful. This tutorial gives a few templates but understanding them is not in the scope of that tutorial. 
 
-The aim of this tutorial is also to propose a minimal template to get you started more quickly on building educational resources that are state-of-the-art in terms of reproducibility. 
+The aim of this tutorial is to get you started quickly on building educational resources with a state-of-the-art level of reproducibility. 
 
 # Why share educational resources on SSPCloud?
 
@@ -30,14 +30,14 @@ Sharing educational resources on SSPCloud offers several advantages, particularl
    Resources on SSPCloud can be accessed and launched with a simple HTTPS link. This eliminates the complexity of manual setup or configuration, enabling users to start working with the resources almost instantly, directly in their browser.
 
 
-As the [`SSPCloud` documentation](https://docs.sspcloud.fr/en/) explains, it's important to understand that with this platform, code (`Git`), data (`S3`) and configuration are stored separately, while the compute space brings these three elements together. For training designers, this makes resources highly reproducible, with full control over the environment. For the users of these resources, it means that they no longer have to install software, play with their machine's rights, etc., before they can get started on the tutorial.
+As explained in the [`SSPCloud` documentation](https://docs.sspcloud.fr/en/), it's important to understand that with this platform, code (`Git`), data (`S3`) and configuration are stored separately, while the compute space brings these three elements together. For training designers, this makes resources highly reproducible, with full control over the environment. For the users of these resources, it means that they no longer have to install software, play with their machine's rights, etc., before they can get started on the tutorial.
 
 ![](https://inseefrlab.github.io/formation-bonnes-pratiques-git-R/slides/img/environment_clean.png)
 
 
 # Step 1: creating resources with `Quarto`
 
-Quarto is an open source program for creating Python and R tutorials. It can handle many output formats, including html, pdf or notebook (.ipynb extension). 
+`Quarto` is an open source program for creating Python and `R` tutorials. It can handle many output formats, including html, pdf or notebook (.ipynb extension). 
 
 ![](pics/quarto.png)
 
@@ -49,16 +49,16 @@ We're going to make the following assumptions about the way in which training is
 The next paragraphs explain how to create the starting tutorial, depending on whether you want to write R or Python resources. It's important to distinguish between the actions to be taken here and those that will be required of training users. For the latter, more direct ways of retrieving the training resource will be possible.
 
 :::: {.callout-tip collapse="true"}
-## Starting from a ready to use environment when developing resources
+## Starting from a ready-to-use environment when developing resources
 
-SSPCloud is useful for trainees but also for trainers. It is quite convenient to use that plateform when developing educational resources: given the way it works, this will help a lot to make your educational resources reproducible.
+SSPCloud is useful for trainees but also for trainers. It is quite convenient to use that platform when developing educational resources: given the way it works, this will help a lot to make your educational resources reproducible.
 
 
 ::: {.panel-tabset}
 
 ## R
 
-The easiest way to do this is to start with an environment equivalent to that used for training: the sspcloud. To do this, open a service with this link: https://datalab.sspcloud.fr/launcher/ide/rstudio?name=rstudio&version=2.1.13&s3=region-ec97c721&networking.user.enabled=true&autoLaunch=true
+The easiest way to do this is to start with an environment equivalent to that used for training: the SSPcloud. To do this, open a service with this link: https://datalab.sspcloud.fr/launcher/ide/rstudio?name=rstudio&version=2.1.13&s3=region-ec97c721&networking.user.enabled=true&autoLaunch=true
 
 Fork repository to get your own editable template. 
 
