--- a/index.qmd
+++ b/index.qmd
@@ -41,12 +41,12 @@ As explained in the [`SSPCloud` documentation](https://docs.sspcloud.fr/en/), it
 
 ![](pics/quarto.png)
 
-We're going to make the following assumptions about the way in which training is made available:
+From here on, we assume that training material is made available in the following form:
 
-- In Python, we assume that the training will be made available in the form of a notebook. This is the standard delivery method for Python code.
-- In R, notebooks are not frequently used, so we assume that the training will be made available in the form of an RStudio project. 
+- In Python, training material takes the form of a notebook. This is the standard delivery method for Python code.
+- In R, training material takes the form of an RStudio project (because notebooks are not frequently used in R). 
 
-The next paragraphs explain how to create the starting tutorial, depending on whether you want to write R or Python resources. It's important to distinguish between the actions to be taken here and those that will be required of training users. For the latter, more direct ways of retrieving the training resource will be possible.
+The next sections explain how to create the starting tutorial, depending on whether you want to write R or Python resources. It's important to distinguish between the actions to be taken here and those that will be required from training users. For the latter, more direct ways of retrieving the training resource will be possible.
 
 :::: {.callout-tip collapse="true"}
 ## Starting from a ready-to-use environment when developing resources
