--- a/index.qmd
+++ b/index.qmd
@@ -1,15 +1,15 @@
 ---
-title: "Creating educational resources for SSPCloud users"
+title: "Creating and disseminating educational resources for SSPCloud users"
 subtitle: "Startup guide"
-author: "Lino Galiana"
+author: "Lino Galiana and Olivier Meslin"
 ---
 
 
-This tutorial aims to be a practical guide for people building `R` or `Python` educational resources and wishing to facilitate access to them through the SSPCloud.
+This tutorial aims to be a practical guide for people developing educational resources in `R` or `Python` and wishing to disseminate them easily through the SSPCloud.
 
-There are a few requirements:
+There are a few technical requirements:
 
-- A minimum level of proficiency in Git is required to develop and make available online training resources. However, this facilitated provision of resources does not imply that trainees are familiar with Git.
+- A minimum level of proficiency in Git is required to develop and make available online training resources. However, accessing to these resources on the SSPCloud does not require any familiarity with Git.
 - [`Quarto`](https://quarto.org/) the automated report and website builder inherited from `R Markdown`.
 - [`SSPCloud` documentation](https://docs.sspcloud.fr/en/), in particular the fundamental difference between making resources available for execution on a local computer or on a server like the SSPCloud. 
 - Some knowledge regarding deployment of resources using `Github Actions` is useful. This tutorial gives a few templates but understanding them is not in the scope of that tutorial. 
@@ -34,25 +34,47 @@ As explained in the [`SSPCloud` documentation](https://docs.sspcloud.fr/en/), it
 
 ![](https://inseefrlab.github.io/formation-bonnes-pratiques-git-R/slides/img/environment_clean.png)
 
+# Quarto
 
-# Step 1: creating resources with `Quarto`
-
-`Quarto` is an open source program for creating Python and `R` tutorials. It can handle many output formats, including html, pdf or notebook (.ipynb extension). 
+`Quarto` is an open source program for creating Python and `R` tutorials. It makes it possible to mix seamlessly code and text in the same document and can handle many output formats, including html, pdf or notebook (.ipynb extension). `Quarto` is strongly recommended for the development of educational resources.
 
 ![](pics/quarto.png)
 
-From here on, we assume that training material is made available in the following form:
+This tutorial assumes that educational resources and training material will be made available in two forms:
 
-- In Python, training material takes the form of a notebook. This is the standard delivery method for Python code.
-- In R, training material takes the form of an RStudio project (because notebooks are not frequently used in R). 
+- Quarto websites, mixing text and code chunks;
+- Interactive scripts:
+      - In Python, training material takes the form of a notebook. This is the standard delivery method for Python code.
+      - In R, training material takes the form of an RStudio project (because notebooks are not frequently used in R). 
 
 The next sections explain how to create the starting tutorial, depending on whether you want to write R or Python resources. It's important to distinguish between the actions to be taken here and those that will be required from training users. For the latter, more direct ways of retrieving the training resource will be possible.
+
+# Developing educational resources
+
+## Step 1: create a Github repository from a template
+
+The very first step towards developing educational resources consists in creating a Github repository that will contain them all. We recommend that you use templates developed specifically for the AIML4OS project. Depending on the language you want to use, there is a [template for `R`](https://github.com/InseeFrLab/AIML4OS-template-quarto-r) and a [template for Python](https://github.com/InseeFrLab/AIML4OS-template-quarto-python).
+
+Here is a simple procedure to re-use a template:
+
+- Go to the Github page of the chosen template (`R` or Python);
+- Click on the ![https://upload.wikimedia.org/wikipedia/commons/3/38/GitHub_Fork_Button.png] button;
+- Choose __carefully__ the owner and the name of the new repository.
+      - Owner: by default the owner is the creator of the fork, but it may be preferable to choose a Github organization (for instance the `AIML4OS` organization);
+      - Name: give the repository a meaningful name, for instance "Intro_To_Deep_Learning" or "Intro_To_Linear_Regression".
+- Dissociate the fork from the original template. To do so, go to the Github page of the new repository, click on Settings, scroll down to the Danger Zone and click on "Leave fork network".
+
+## Step 2: develop resources with `Quarto`
+
+SSPCloud is not only useful to disseminate educational resources; it is also the right place to develop them. We strongly recommend that you develop on the SSPCloud because this will help a lot to make your educational resources reproducible.
+
+Here is a simple procedure to re-use a template:
+
 
 :::: {.callout-tip collapse="true"}
 ## Starting from a ready-to-use environment when developing resources
 
-SSPCloud is useful for trainees but also for trainers. It is quite convenient to use that platform when developing educational resources: given the way it works, this will help a lot to make your educational resources reproducible.
-
+SSPCloud is not only useful to disseminate educational resources; it is also the right place to develop them. We strongly recommend that you develop on the SSPCloud because this will help a lot to make your educational resources reproducible.
 
 ::: {.panel-tabset}
 
