--- a/index.qmd
+++ b/index.qmd
@@ -62,7 +62,7 @@ Here is a simple procedure to re-use a template:
       - Name: give the repository a meaningful name, for instance "Intro_To_Deep_Learning" or "Intro_To_Linear_Regression".
 - Dissociate the fork from the original template. To do so, go to the Github page of the new repository, click on Settings, scroll down to the Danger Zone and click on "Leave fork network".
 
-## Step 2: develop resources with `Quarto` on the SSPCloud
+## Step 2: get started with `Quarto` on the SSPCloud
 
 SSPCloud is not only useful to disseminate educational resources; it is also the right place to develop them. This will facilitate resource dissemination as the environment used for training will be equivalent to the one used for development. In otyher words, we strongly recommend that you develop on the SSPCloud because this will help a lot to make your educational resources reproducible.
 
@@ -79,7 +79,7 @@ Here is a simple procedure to start developing resources on the SSP-Cloud. The p
 - Go the "My Services" Tab and click on "New Service";
 - Choose Rstudio and click Launch;
 - Customize the configuration by changing three settings:
-   - In the "Friendly Name" field, choose a meaningful name (for instance "Intro_To_Linear_Regression");   
+   - In the "Friendly Name" field, choose a meaningful name for the configuration (for instance `dev_Intro_To_Linear_Regression`);   
    - In the "Repository" field of the "Git" tab, paste the URL of the repository you created in step 1 (for instance: `https://www.github.com/AIML4OS/Intro_To_Linear_Regression`);
    - In the "Network Access" tab, enable access to your service through port 5000.
 - Click on Save configuration;
@@ -95,34 +95,73 @@ Here is a simple procedure to start developing resources on the SSP-Cloud. The p
 
 ::::
 
-- Go the "My Services" Tab;
-- __On the first time you develop resources on this particular project:__
-   - Click on "New Service";
-   - Choose Rstudio and click Launch;
-   - Customize the configuration by changing three settings:
-      - In the "Friendly Name" field, choose a meaningful name (for instance "dev_Intro_To_Linear_Regression");   
-      - In the "Repository" field of the "Git" tab, paste the URL of the repository you created in step 1 (for instance: `https://www.github.com/AIML4OS/Intro_To_Linear_Regression`);
-      - In the "Network Access" tab, enable access to your service through port 5000.
-   - Click on Save configuration;
-- Click on Launch;
-- Open the Rstudio service;
-- Develop your resources. Do not forget to commit and push regularly!
-
-
 ## Python
+
+:::: {.panel-tabset}
+
+### First time
 
 - Go the "My Services" Tab and click on "New Service";
 - Choose Vscode-r-python-julia and click Launch. We recommend using Vscode because developing Quarto resources is easier with VSCode than with Jupyter. However, final users will be able to open your educational resources with Jupyter;
 - Customize the configuration by changing three settings:
-   - In the "Friendly Name" field, choose a meaningful name (for instance "Intro_To_Linear_Regression");   
+   - In the "Friendly Name" field, choose a meaningful name (for instance `dev_Intro_To_Linear_Regression`);   
    - In the "Repository" field of the "Git" tab, paste the URL of the repository you created in step 1 (for instance: `https://www.github.com/AIML4OS/Intro_To_Linear_Regression`);
    - In the "Network Access" tab, enable access to your service through port 5000.
-- Open the Vscode service;
+- Click on Save configuration;
+- Click on Launch;
+- Open the Rstudio service;
 - Develop your resources. Do not forget to commit and push regularly!
+
+### Not the first time
+
+- Go the "My Services" Tab;
+- On the right side of the screen, find the configuration of your project and click on Launch;
+- Develop your resources. Do not forget to commit and push regularly!
+
+::::
 
 ::: {.panel-tabset}
 
-## Step 3: develop resources with `Quarto` on the SSPCloud
+## Step 3: set up a Github pages website
+
+__This step is optional__, depending on whether your resources include a website. If your resources consist only in Jupyter notebooks, R scripts or Quarto documents with R chunks, you can skip this step.
+
+### Create the `gh-pages` branch
+
+When developing resources, you will most likely use the `main` branch. However, for `Github Actions` to work, you need an additional branch `gh-pages` used by Github to deploy websites. This one will be rewritten automatically by `Github` after every Github Actions pipeline. However, you need to create it first. __This should be done only once.__ Quarto documentation gives this command to create that branch. __Be careful with that command, do not use before having done a first push on Github.__
+
+```{.bash}
+git checkout --orphan gh-pages
+git reset --hard # make sure all changes are committed before running this!
+git commit --allow-empty -m "Initialising gh-pages branch"
+git push origin gh-pages
+```
+
+### Define a Github Actions workflow
+
+We need to define a GHA workflow to automate output construction and deployment. This is done using specific yaml scripts, located in the `.github/workflows` directory of your repository.
+
+::: {.panel-tabset}
+## R
+
+Replace content of `.github/workflows/prod.yml` by content stored inside `resources/workflows/r.yaml`
+
+## Python
+
+Replace content of `.github/workflows/prod.yml` by content stored inside `resources/workflows/python.yaml`
+
+:::
+
+Commit and push that new file. Look at the new pipeline that starts after every push on `main` branch. Once succeeded, you should have a publicly available website that has been deployed on a Github pages website. 
+
+
+
+## Step 4: develop resources
+
+- Committer souvent
+- Ajuster la structure
+- Gérer les dépendances
+- Visualiser le site.
 
 Now assuming you want to give access to your resources as an html website, from command line you can preview your website using
 
@@ -153,38 +192,6 @@ We'll now assume that you're satisfied with the resources you've built and want 
 
 # Make your resources available on an online website
 
-::: {.callout-warning}
-## Github actions needs a `gh-pages` branch to deploy websites
-
-When developing resources, you use `main` branch. However, for `Github Actions` to work, you need an additional branch `gh-pages`. This one will be rewritten automatically by `Github` after every Github Actions pipeline. However, you need to create it first. 
-
-Quarto documentation gives this command to create that branch:
-
-```{.bash}
-git checkout --orphan gh-pages
-git reset --hard # make sure all changes are committed before running this!
-git commit --allow-empty -m "Initialising gh-pages branch"
-git push origin gh-pages
-```
-
-__Be careful with that command, do not use before having done a first push on Github.__
-
-:::
-
-To generalize the previous approach, we need to automate output construction through Github Actions.
-
-::: {.panel-tabset}
-## R
-
-Replace content of `.github/workflows/prod.yml` by content stored inside `resources/workflows/r.yaml`
-
-## Python
-
-Replace content of `.github/workflows/prod.yml` by content stored inside `resources/workflows/python.yaml`
-
-:::
-
-Commit and push that new file. Look at the new pipeline that starts after every push on `main` branch. Once succeeded, you should have a publicly available website that has been deployed on a Github pages website. 
 
 ## Make a ready to use link to your resources
 
