--- a/index.qmd
+++ b/index.qmd
@@ -56,7 +56,7 @@ The very first step towards developing educational resources consists in creatin
 Here is a simple procedure to re-use a template:
 
 - Go to the Github page of the chosen template (`R` or Python);
-- Click on the ![https://upload.wikimedia.org/wikipedia/commons/3/38/GitHub_Fork_Button.png] button;
+- Click on the ![https://docs.github.com/assets/cb-76823/mw-1440/images/help/repository/use-this-template-button.webp] button;
 - Choose __carefully__ the owner and the name of the new repository:
       - Owner: by default the owner is the creator of the fork, but it may be preferable to choose a Github organization (for instance the `AIML4OS` organization);
       - Name: give the repository a meaningful name, for instance "Intro_To_Deep_Learning" or "Intro_To_Linear_Regression".
@@ -87,7 +87,7 @@ Here is a simple procedure to start developing resources on the SSP-Cloud. The p
 - Open the Rstudio service;
 - Rename the .Rproj file with a meaningful name (for instance `Intro_To_Linear_Regression.Rproj`);
 - Click on the Rproj file to open the RStudio project;
-- You're all set!!
+- You're all set!
 
 ### Not the first time
 
@@ -95,7 +95,7 @@ Here is a simple procedure to start developing resources on the SSP-Cloud. The p
 - On the right side of the screen, find the configuration of your project and click on Launch;
 - Open the Rstudio service;
 - Click on the Rproj file to open the RStudio project;
-- You're all set!!
+- You're all set!
 
 ::::
 
@@ -114,13 +114,13 @@ Here is a simple procedure to start developing resources on the SSP-Cloud. The p
 - Click on Save configuration;
 - Click on Launch;
 - Open the Vscode service;
-- You're all set!!
+- You're all set!
 
 ### Not the first time
 
 - Go the "My Services" Tab;
 - On the right side of the screen, find the configuration of your project and click on Launch;
-- You're all set!!
+- You're all set!
 
 ::::
 
