--- a/index.qmd
+++ b/index.qmd
@@ -56,7 +56,7 @@ The very first step towards developing educational resources consists in creatin
 Here is a simple procedure to re-use a template:
 
 - Go to the Github page of the chosen template (`R` or Python);
-- Click on the ![https://docs.github.com/assets/cb-76823/mw-1440/images/help/repository/use-this-template-button.webp] button;
+- Click on the !()[https://docs.github.com/assets/cb-76823/mw-1440/images/help/repository/use-this-template-button.webp] button and on "Create a new repository";
 - Choose __carefully__ the owner and the name of the new repository:
       - Owner: by default the owner is the creator of the fork, but it may be preferable to choose a Github organization (for instance the `AIML4OS` organization);
       - Name: give the repository a meaningful name, for instance "Intro_To_Deep_Learning" or "Intro_To_Linear_Regression".
