--- a/index.qmd
+++ b/index.qmd
@@ -56,16 +56,19 @@ The very first step towards developing educational resources consists in creatin
 Here is a simple procedure to re-use a template:
 
 - Go to the Github page of the chosen template (`R` or Python);
-- Click on the ![](https://docs.github.com/assets/cb-76823/mw-1440/images/help/repository/use-this-template-button.webp) button and on "Create a new repository";
+- Click on the "Use this template" button and then on "Create a new repository" (see screenshot);
+
+<img src="https://docs.github.com/assets/cb-76823/mw-1440/images/help/repository/use-this-template-button.webp" style="max-width:400px;width:100%; text-align-last:center">
+
 - Choose __carefully__ the owner and the name of the new repository:
       - Owner: by default the owner is the creator of the fork, but it may be preferable to choose a Github organization (for instance the `AIML4OS` organization);
       - Name: give the repository a meaningful name, for instance "Intro_To_Deep_Learning" or "Intro_To_Linear_Regression".
 
 ## Step 2: get started with `Quarto` on the SSPCloud
 
-SSPCloud is not only useful to disseminate educational resources; it is also the right place to develop them. This will facilitate resource dissemination as the environment used for training will be equivalent to the one used for development. In otyher words, we strongly recommend that you develop on the SSPCloud because this will help a lot to make your educational resources reproducible.
+SSPCloud is not only useful to disseminate educational resources; it is also the right place to develop them. This will facilitate resource dissemination as the environment used for training will be equivalent to the one used for development. In other words, we strongly recommend that you develop on the SSPCloud because this will help a lot to make your educational resources reproducible.
 
-Here is a simple procedure to start developing resources on the SSP-Cloud. The procedure is different and slightly longer if this is the first time you develop resources on this particular project (because you need to define a configuration).
+Here is a simple procedure to start developing resources on the SSP-Cloud. __The procedure is different and slightly longer if this is the first time__ you develop resources on this particular project (because you need to define a configuration).
 
 ::: {.panel-tabset}
 
@@ -84,7 +87,7 @@ Here is a simple procedure to start developing resources on the SSP-Cloud. The p
 - Click on Save configuration;
 - Click on Launch;
 - Open the Rstudio service;
-- Rename the .Rproj file with a meaningful name (for instance `Intro_To_Linear_Regression.Rproj`);
+- Rename the Rproj file with a meaningful name (for instance `Intro_To_Linear_Regression.Rproj`);
 - Click on the Rproj file to open the RStudio project;
 - You're all set!
 
@@ -105,7 +108,7 @@ Here is a simple procedure to start developing resources on the SSP-Cloud. The p
 ### First time
 
 - Go the "My Services" Tab and click on "New Service";
-- Choose Vscode-r-python-julia and click Launch. We recommend using Vscode because developing Quarto resources is easier with VSCode than with Jupyter. However, final users will be able to open your educational resources with Jupyter;
+- Choose `Vscode-r-python-julia` and click Launch. We recommend using Vscode because developing Quarto resources is easier with VSCode than with Jupyter. However, final users will be able to open your educational resources with Jupyter;
 - Customize the configuration by changing three settings:
       - In the "Friendly Name" field, choose a meaningful name (for instance `dev_Intro_To_Linear_Regression`);   
       - In the "Repository" field of the "Git" tab, paste the URL of the repository you created in step 1 (for instance: `https://www.github.com/AIML4OS/Intro_To_Linear_Regression`);
@@ -123,15 +126,14 @@ Here is a simple procedure to start developing resources on the SSP-Cloud. The p
 
 ::::
 
-::: {.panel-tabset}
+:::
 
 
 ## Step 3: develop resources
 
-- Committer souvent
-- Ajuster la structure
-- Gérer les dépendances
-- Visualiser le site.
+### Developing a website
+
+You can develop you website by writing text and code chunks in the existing `qmd` files (`index.qmd` and `chapter1.qmd`). You can also extend the structure of the website by adding new Quarto documents (in the `chapters` subdirectory). These new documents must then be added to the website by modifying the `_quarto.yml` file in two places: in the `render` argument, and in the `contents` of the `sidebar` argument.
 
 If your resources include a website, it is convenient to have a look at what this website looks like while developing it. You can preview your website from command line by executing:
 
@@ -139,13 +141,26 @@ If your resources include a website, it is convenient to have a look at what thi
 quarto preview --port 5000 --host 0.0.0.0
 ```
 
-Then go to https://datalab.sspcloud.fr/my-services, open the README of the service you use and click on the section regarding external port opened [capture à faire].
+Then go to https://datalab.sspcloud.fr/my-services, open the README of the service you are using and click on the link to the external port.
 
-## R
+::: {#fig-port5000 layout-ncol=2}
 
-You can jump to next session
+![](pics/SSPCloud2.png)
 
-## Python
+![](pics/SSPCloud3.png)
+:::
+
+### Developing interactive scripts
+
+A compléter sur Quarto/R et Notebooks Python.
+
+#### R
+
+A compléter sur Quarto/R
+
+#### Python
+
+A compléter sur Notebooks Python.
 
 It makes more sense to provide your trainees with a jupyter notebook. To generate it, you can write
 
@@ -155,10 +170,11 @@ quarto render --to ipynb
 
 Notebooks will be written in the `_site` folder
 
-:::
+### What you should do at all times
 
+__It is essential that you commit and push your changes on a regular basis__ (every 30 minutes or so), because your service (Rstudio or VScode) is not persistent, meaning that any changes that were pushed before closing the service are permanently lost.
 
-We'll now assume that you're satisfied with the resources you've built and want to make them available to your trainees.
+__Gérer les dépendances: à compléter par Lino__
 
 ## Step 4: set up a Github pages website
 
@@ -177,27 +193,13 @@ git push origin gh-pages
 
 ### Define a Github Actions workflow
 
-We need to define a GHA workflow to automate output construction and deployment. This is done using specific yaml scripts, located in the `.github/workflows` directory of your repository.
+You need to define a GHA workflow to automate output construction and deployment. A GHA workflow is just a list of instructions (for instance: install `R`, install packages...) that are executed automatically every time (for instance every time you push on the master branch). A GHA workflow is done using specific yaml scripts, located in the `.github/workflows` directory of your repository. The templates already contains standard workflows that you can use as a starting point.
 
-::: {.panel-tabset}
-## R
+You can monitor Github Actions jobs in the "Actions" tab of the Github repository of your project. Do not be afraid if your jobs fail at first; getting Github Actions to work typically requires some debugging.
 
-Replace content of `.github/workflows/prod.yml` by content stored inside `resources/workflows/r.yaml`
+## Step 5: make your resources available on an online website
 
-## Python
-
-Replace content of `.github/workflows/prod.yml` by content stored inside `resources/workflows/python.yaml`
-
-:::
-
-Commit and push that new file. Look at the new pipeline that starts after every push on `main` branch. Once succeeded, you should have a publicly available website that has been deployed on a Github pages website. 
-
-
-
-# Make your resources available on an online website
-
-
-## Make a ready to use link to your resources
+<!-- ## Make a ready to use link to your resources
 
 Let's assume now you want trainees to avoid copy-pasting code from your program to their sandbox environment. SSPCloud proposes a feature that enables to launch a ready to use sandbox with one click. This enables to start an environment that can be overloaded by some parameters that would make trainees ready to start their learning experience. 
 
@@ -212,4 +214,4 @@ Let's assume now you want trainees to avoid copy-pasting code from your program 
 
 # List your resources on the training portal
 
-TO DO
+TO DO -->
